--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,50 @@
   box-sizing: border-box;
 }
 
-body{
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+body main{
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: weight;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
+
+
+header{
+  display: flex;
+  justify-content: space-between;
+  background-color: white
+  height: 80px;
+}
+
+
+
+nav ul{
+display: flex;
+}
+
+.topbar-left{
+  display: flex;
+}
+
+li{
+  list-style: none;
+  text-decoration: none;
+  padding: 5px;
+  
+}
+
+/* debug */
+.debug header{
+background-color: yellow;
+border: 1px solid black;
+}
+
+.debug nav{
+  border: 1px solid black
+}
+
+.debug .logo{
+  border: 1px solid black;
 }
