--- a/css/style.css
+++ b/css/style.css
@@ -21,26 +21,42 @@ header{
   height: 80px;
 }
 
-
-
 nav ul{
 display: flex;
 }
 
 .topbar-left{
   display: flex;
+  align-items: center;
+}
+
+.topbar-right{
+  display: flex;
+  align-items: center;
 }
 
 li{
   list-style: none;
-  text-decoration: none;
-  padding: 5px;
-  
 }
+
+li a{
+  text-decoration: none;
+}
+
+#jumbotron{
+  background-color: lightblue;
+  height: 740px;
+  width: 100%;
+}  
+
+.container-large{
+  width: 1000px;
+  margin: 0 auto;
+}
+  
 
 /* debug */
 .debug header{
-background-color: yellow;
 border: 1px solid black;
 }
 
@@ -49,5 +65,9 @@ border: 1px solid black;
 }
 
 .debug .logo{
+  border: 1px solid black;
+}
+
+.debug .container-large{
   border: 1px solid black;
 }
