--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ li a{
 }
 
 #jumbotron{
-  background-color: lightblue;
+  background-color: #b4d0e7;
   height: 740px;
   width: 100%;
 }  
@@ -60,14 +60,29 @@ li a{
 }
 
 h1{
-  font-size: 4rem;
+  font-size: 5rem;
   font-weight: 900;
-  padding-top: 100px;
-  padding-bottom: 70px;
+  padding-top: 80px;
+  padding-bottom: 50px;
 }
 
 .jumbo-text{
   width: 400px;
+}
+
+.jumbo-text > p{
+  padding-right: 30px;
+}
+
+.prova > a{
+  text-decoration: none;
+  color: white;
+  background-color: rgb(0, 60, 255);
+  padding: 15px;
+}
+
+.prova{
+  padding: 30px 0;
 }
 
 .jumbo-img > img{
