--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ h1{
   font-weight: 500;
 }
 
-.prova > a{
+.link a{
   text-decoration: none;
   color: white;
   background-color: rgb(0, 60, 255);
@@ -129,7 +129,15 @@ h2{
 
 .column{
   width: calc(100% / 3);
-  height: 600px;
+  height: 800px;
+}
+
+h3{
+  font-size: 25px;
+}
+
+.column li{
+  padding: 25px;
 }
 
 
