--- a/css/style.css
+++ b/css/style.css
@@ -93,9 +93,7 @@ h1{
 }
 
 .prova{
-  padding: 30px 0;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding: 50px 0; 
 }
 
 .arrow{
@@ -130,12 +128,30 @@ h3{
   font-size: 25px;
 }
 
+.price{
+  font-size: 15px;
+  font-weight: bold;
+}
+
+h3,h4,.price,.duration{
+  padding: 20px;
+}
+
 .column li{
   padding: 25px;
 }
 
+.trial{
+  padding: 20px;
+}
+
 .buy{
   padding: 30px;
+}
+
+i{
+  color: rgb(0, 60, 255);
+  font-weight: bolder; 
 }
 
 
